--- a/style.css
+++ b/style.css
@@ -2,185 +2,381 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.navbar{
-    width: 990px;
-    margin: 20px auto;
-    padding:20px 0;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.button{
-    background-color: white;
-    border: 1px lightgrey solid;
-    border-radius: 12px;
-    margin: 0;
-    padding:15px 30px;
-    font-size: 16px;
+
+
+/* small screen */
+@media(max-width:990px){
+    .navbar{
+        
+        margin: 20px auto;
+        padding:20px 0;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .button{
+        background-color: white;
+        border: 1px lightgrey solid;
+        border-radius: 12px;
+        margin: 0;
+        padding:10px 10px;
+        font-size: 15px;
+        
+    }
+    .logo{
+        height: 50px
+    }
     
-}
-.logo{
-    height: 50px
-}
-
-.stories{
-    width: 990px;
-    margin:20px auto;
-    display: flex;
-    gap:10px;
-}
-.story{
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-}
-.userstory{
-    text-align: center;
-}
-.user-name{
-    margin-top:0;
-}
-.container{
-    width:990px;
-    gap:40px;
+    .stories{
+        width: 100%;
+        margin:20px auto;
+        display: flex;
+        gap:10px;
+        overflow:scroll;
+    }
+    .story{
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+    }
+    .userstory{
+        text-align: center;
+    }
+    .user-name{
+        margin-top:0;
+        font-size: 10px;
+    }
+    .container{
+        margin:50px auto;
+        
     
-    margin:50px auto;
-    display:flex;
-
-}
-.feeds{
-    width:590px;
-}
-.sidebar{
-    width:400px;
-}
-.post{
-
-    border:2px lightgrey solid;
+    }
+    .feeds{
+        
+    }
+    .sidebar{
+        text-align:center;
+        
+    }
+    .post{
     
-    border-radius: 15px;
-    padding:8px 8px;
-    margin-bottom:20px;
-
-
-}
-.header{
-    /* border:2px solid; */
-    margin:0px 2px 0px 2px;
-    width:100%;
-    display:flex;
-    align-items: center;
-    justify-content:space-between;
-}
-.headerleft{
-    display:flex;
-    gap:5px;
-    align-items: center;
-
-}
-.ago{
-    display:flex;
-    align-items: center;
-}
-.follow{
-    display:flex;
-    align-items:center;
-}
-#followbutton{
-    border:none;
-    background-color: white;
-    color:blue;
+        border:2px lightgrey solid;
+        
+        border-radius: 15px;
+        padding:8px 8px;
+        margin-bottom:20px;
     
-    margin-top:0px;
-    font-weight: bold;
+    
+    }
+    .header{
+        /* border:2px solid; */
+        margin:0px 2px 0px 2px;
+        width:100%;
+        display:flex;
+        align-items: center;
+        justify-content:space-between;
+    }
+    .headerleft{
+        display:flex;
+        gap:5px;
+        align-items: center;
+    
+    }
+    .ago{
+        display:flex;
+        align-items: center;
+    }
+    .follow{
+        display:flex;
+        align-items:center;
+    }
+    #followbutton{
+        border:none;
+        background-color: white;
+        color:blue;
+        
+        margin-top:0px;
+        font-weight: bold;
+    
+    }
+    .profile{
+        height: 45px;
+        width: 45px;
+        border-radius: 50%;
+    }
+    .verifiedname{
+        display:flex;
+        align-items: center;
+        gap:10px;
+        margin:0px;
+    }
+    #name{
+        font-size: 1rem;
+        font-weight:400;
+    }
+    
+    #userid{
+        color:lightgrey;
+        margin-top:-12px;
+        font-weight: bold;
+    }
+    .mid{
+        /* border:2px blue solid; */
+        margin-top: 0%;
+        margin-bottom: 10px;
+    }
+    .pic{
+        width:100%;
+        height:300px;
+        border-radius: 14px;
+    }
+    
+    
+    .footerfirst{
+        /* border:2px green solid; */
+        width:100%;
+        margin-bottom: 20px;
+    }
+    .footerfirstline{
+        display:flex;
+        justify-content: space-between;
+    }
+    .threeicon{
+        display:flex;
+        align-items: center;
+        gap:10px;
+    }
+    .comment{
+        margin-top: 0px;
+        display:flex;
+        align-items: center;
+        gap:3px;
+        margin: 0px;
+    }
+    .profile1{
+        border-radius: 50%;
+        height: 20px;
+    }
+    #namec{
+        font-size: 13px;
+    }
+    .verifiedname1{
+        display:flex;
+        align-items: center;
+        gap:2px;
+    }
+    #likes{
+        font-size: 15px;
+        margin-top: -8px;
+    }
+    .caption{
+        display:flex;
+        gap:9px;
+        margin-top:-13px;
+    
+    }
+    #viewallcomment{
+        margin-top: 0px;
+    }
+    .plystr{
+        justify-content: center;
+        height:150px;
+    }
+    .appstr{
+        justify-content: center;
+        height:150px;
+    
+    }
+    .mgtop{
+        margin-top: 0;
+    }
+
 
 }
-.profile{
-    height: 45px;
-    width: 45px;
-    border-radius: 50%;
-}
-.verifiedname{
-    display:flex;
-    align-items: center;
-    gap:10px;
-    margin:0px;
-}
-#name{
-    font-size: 1rem;
-    font-weight:400;
-}
 
-#userid{
-    color:lightgrey;
-    margin-top:-12px;
-    font-weight: bold;
-}
-.mid{
-    /* border:2px blue solid; */
-    margin-top: 0%;
-    margin-bottom: 10px;
-}
-.pic{
-    width:100%;
-    height:300px;
-    border-radius: 14px;
-}
+/* big screen */
+@media(min-width:990px){
+    .navbar{
+        width: 990px;
+        margin: 20px auto;
+        padding:20px 0;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .button{
+        background-color: white;
+        border: 1px lightgrey solid;
+        border-radius: 12px;
+        margin: 0;
+        padding:15px 30px;
+        font-size: 16px;
+        
+    }
+    .logo{
+        height: 50px
+    }
+    
+    .stories{
+        width: 990px;
+        margin:20px auto;
+        display: flex;
+        gap:10px;
+    }
+    .story{
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+    }
+    .userstory{
+        text-align: center;
+    }
+    .user-name{
+        margin-top:0;
+    }
+    .container{
+        width:990px;
+        gap:40px;
+        
+        margin:50px auto;
+        display:flex;
+    
+    }
+    .feeds{
+        width:590px;
+    }
+    .sidebar{
+        width:400px;
+    }
+    .post{
+    
+        border:2px lightgrey solid;
+        
+        border-radius: 15px;
+        padding:8px 8px;
+        margin-bottom:20px;
+    
+    
+    }
+    .header{
+        /* border:2px solid; */
+        margin:0px 2px 0px 2px;
+        width:100%;
+        display:flex;
+        align-items: center;
+        justify-content:space-between;
+    }
+    .headerleft{
+        display:flex;
+        gap:5px;
+        align-items: center;
+    
+    }
+    .ago{
+        display:flex;
+        align-items: center;
+    }
+    .follow{
+        display:flex;
+        align-items:center;
+    }
+    #followbutton{
+        border:none;
+        background-color: white;
+        color:blue;
+        
+        margin-top:0px;
+        font-weight: bold;
+    
+    }
+    .profile{
+        height: 45px;
+        width: 45px;
+        border-radius: 50%;
+    }
+    .verifiedname{
+        display:flex;
+        align-items: center;
+        gap:10px;
+        margin:0px;
+    }
+    #name{
+        font-size: 1rem;
+        font-weight:400;
+    }
+    
+    #userid{
+        color:lightgrey;
+        margin-top:-12px;
+        font-weight: bold;
+    }
+    .mid{
+        /* border:2px blue solid; */
+        margin-top: 0%;
+        margin-bottom: 10px;
+    }
+    .pic{
+        width:100%;
+        height:300px;
+        border-radius: 14px;
+    }
+    
+    
+    .footerfirst{
+        /* border:2px green solid; */
+        width:100%;
+        margin-bottom: 20px;
+    }
+    .footerfirstline{
+        display:flex;
+        justify-content: space-between;
+    }
+    .threeicon{
+        display:flex;
+        align-items: center;
+        gap:10px;
+    }
+    .comment{
+        margin-top: 0px;
+        display:flex;
+        align-items: center;
+        gap:3px;
+        margin: 0px;
+    }
+    .profile1{
+        border-radius: 50%;
+        height: 20px;
+    }
+    #namec{
+        font-size: 13px;
+    }
+    .verifiedname1{
+        display:flex;
+        align-items: center;
+        gap:2px;
+    }
+    #likes{
+        font-size: 15px;
+        margin-top: -8px;
+    }
+    .caption{
+        display:flex;
+        gap:9px;
+        margin-top:-13px;
+    
+    }
+    #viewallcomment{
+        margin-top: 0px;
+    }
+    .plystr{
+        height:150px;
+    }
+    .appstr{
+        height:150px;
+    
+    }
+    .mgtop{
+        margin-top: 0;
+    }
 
-
-.footerfirst{
-    /* border:2px green solid; */
-    width:100%;
-    margin-bottom: 20px;
-}
-.footerfirstline{
-    display:flex;
-    justify-content: space-between;
-}
-.threeicon{
-    display:flex;
-    align-items: center;
-    gap:10px;
-}
-.comment{
-    margin-top: 0px;
-    display:flex;
-    align-items: center;
-    gap:3px;
-    margin: 0px;
-}
-.profile1{
-    border-radius: 50%;
-    height: 20px;
-}
-#namec{
-    font-size: 13px;
-}
-.verifiedname1{
-    display:flex;
-    align-items: center;
-    gap:2px;
-}
-#likes{
-    font-size: 15px;
-    margin-top: -8px;
-}
-.caption{
-    display:flex;
-    gap:9px;
-    margin-top:-13px;
-
-}
-#viewallcomment{
-    margin-top: 0px;
-}
-.plystr{
-    height:150px;
-}
-.appstr{
-    height:150px;
-
-}
-.mgtop{
-    margin-top: 0;
 }
